--- a/ui/customer/index.html
+++ b/ui/customer/index.html
@@ -100,6 +100,133 @@ button{
   background:none;
   border:1px solid var(--muted);
 }
+   /* ======================================================
+   Theme + Layout (Match Admin look)
+   - Keeps your existing content/JS intact
+====================================================== */
+
+:root{
+  --bg:#f4f6f9;
+  --sidebar:#ffffff;
+  --sidebar-text:#0f172a;
+
+  --card:#ffffff;
+  --text:#0f172a;
+  --muted:#64748b;
+
+  --line:rgba(15,23,42,.10);
+  --shadow:0 8px 24px rgba(15,23,42,.08);
+
+  --accent:#0f62fe;
+  --accent-soft:rgba(15,98,254,.12);
+}
+
+html[data-theme="dark"]{
+  --bg:#0b1220;
+  --sidebar:#0f172a;
+  --sidebar-text:#e2e8f0;
+
+  --card:#111827;
+  --text:#e5e7eb;
+  --muted:#94a3b8;
+
+  --line:rgba(148,163,184,.18);
+  --shadow:0 12px 30px rgba(0,0,0,.45);
+
+  --accent:#3b82f6;
+  --accent-soft:rgba(59,130,246,.18);
+}
+
+/* Backwards-compat aliases so you don't have to change existing rules */
+html{
+  --fg: var(--text);
+  --border: var(--line);
+}
+
+/* Keep your existing reset */
+* { box-sizing: border-box; font-family: system-ui, -apple-system, sans-serif; }
+
+body{
+  margin:0;
+  background:var(--bg);
+  color:var(--text);
+
+  /* This is what makes it “layout.html” style */
+  display:flex;
+  height:100vh;
+}
+
+/* ---- Sidebar (layout.html style) ---- */
+.sidebar{
+  width:250px;
+  background:var(--sidebar);
+  color:var(--sidebar-text);
+  display:flex;
+  flex-direction:column;
+  padding:20px;
+  border-right:1px solid var(--line);
+}
+
+.sidebar h2{
+  font-size:16px;
+  margin:0 0 18px 0;
+  display:flex;
+  align-items:center;
+  gap:10px;
+}
+
+/* IMPORTANT: prevent purple links */
+.sidebar a,
+.sidebar a:visited{
+  color:var(--sidebar-text);
+  text-decoration:none;
+}
+
+.nav-link{
+  padding:10px 12px;
+  border-radius:10px;
+  text-decoration:none;
+  color:var(--sidebar-text);
+  margin-bottom:6px;
+  font-size:14px;
+}
+
+.nav-link:hover{
+  background:rgba(15,23,42,.06);
+}
+
+html[data-theme="dark"] .nav-link:hover{
+  background:rgba(255,255,255,.08);
+}
+
+.nav-link.active{
+  background:var(--accent-soft);
+  border:1px solid rgba(15,98,254,.25);
+}
+
+/* ---- Main wrapper ---- */
+.main{
+  flex:1;
+  display:flex;
+  flex-direction:column;
+}
+
+/* Header bar like admin */
+.header{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:18px 24px;
+  background:var(--card);
+  border-bottom:1px solid var(--line);
+}
+
+/* Content area */
+.content{
+  padding:32px;
+  overflow:auto;
+}
+
 /* ======================================================
    Enterprise Theme (Matches licenses.html)
 ====================================================== */
