--- a/ui/customer/index.html
+++ b/ui/customer/index.html
@@ -408,14 +408,31 @@ main {
   height:100vh;
 }
 
-.sidebar{
-  width:250px;
-  background:#0f172a;
-  color:#e2e8f0;
-  display:flex;
-  flex-direction:column;
-  padding:20px;
+/* ================================
+   FIX SIDEBAR LIGHT MODE
+   (Override conflicting rules)
+================================ */
+
+html[data-theme="light"] .sidebar{
+  background:#ffffff !important;
+  color:#0f172a !important;
+  border-right:1px solid rgba(15,23,42,.10);
 }
+
+html[data-theme="light"] .sidebar a,
+html[data-theme="light"] .sidebar a:visited{
+  color:#0f172a !important;
+}
+
+html[data-theme="light"] .nav-link:hover{
+  background:rgba(15,23,42,.06) !important;
+}
+
+html[data-theme="light"] .nav-link.active{
+  background:rgba(15,98,254,.12) !important;
+  border:1px solid rgba(15,98,254,.25);
+}
+
 
 .main{
   flex:1;
