--- a/ui/customer/licenses.html
+++ b/ui/customer/licenses.html
@@ -235,6 +235,14 @@ tbody tr:hover{
 }
 
 .hidden{ display:none !important; }
+body {
+  display: flex;
+  min-height: 100vh;
+}
+
+.app {
+  display: contents;
+}
 
 </style>
 </head>
