--- a/ui/customer/maintenance.html
+++ b/ui/customer/maintenance.html
@@ -1,327 +1,330 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" data-theme="light">
 <head>
-<meta charset="utf-8"/>
-<title>Webex Platform Maintenance</title>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta charset="UTF-8" />
+<title>US Signal | Webex Maintenance</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <style>
-:root {
-  --bg: #f3f4f6;
-  --card: #ffffff;
-  --text: #111827;
-  --muted: #6b7280;
-  --border: #e5e7eb;
-  --primary: #2563eb;
-  --danger: #dc2626;
+:root{
+  --bg:#f8fafc;
+  --card:#ffffff;
+  --border:#e2e8f0;
+  --text:#0f172a;
+  --muted:#64748b;
+  --accent:#2563eb;
+  --success:#16a34a;
+  --warning:#f59e0b;
+  --danger:#dc2626;
+  --shadow:0 10px 30px rgba(0,0,0,.06);
 }
 
-body.dark {
-  --bg: #111827;
-  --card: #1f2937;
-  --text: #f9fafb;
-  --muted: #9ca3af;
-  --border: #374151;
-  --primary: #3b82f6;
-  --danger: #ef4444;
+html[data-theme="dark"]{
+  --bg:#0b1220;
+  --card:#0f172a;
+  --border:#1e293b;
+  --text:#e5e7eb;
+  --muted:#94a3b8;
+  --accent:#3b82f6;
+  --shadow:0 10px 30px rgba(0,0,0,.35);
 }
 
-body {
-  margin: 0;
-  font-family: system-ui;
-  background: var(--bg);
-  color: var(--text);
+*{ box-sizing:border-box; font-family:system-ui; }
+
+body{
+  margin:0;
+  background:var(--bg);
+  color:var(--text);
+  display:flex;
+  height:100vh;
 }
 
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 16px 24px;
-  border-bottom: 1px solid var(--border);
-  background: var(--card);
+/* Sidebar */
+.sidebar{
+  width:250px;
+  background:var(--card);
+  border-right:1px solid var(--border);
+  padding:20px;
+  display:flex;
+  flex-direction:column;
 }
 
-button {
-  padding: 8px 14px;
-  border-radius: 8px;
-  border: 1px solid var(--border);
-  cursor: pointer;
-  font-weight: 600;
-  background: transparent;
-  color: var(--text);
+.nav-link{
+  padding:10px 12px;
+  border-radius:8px;
+  text-decoration:none;
+  color:var(--text);
+  margin-bottom:6px;
+  font-size:14px;
 }
 
-.container {
-  max-width: 1100px;
-  margin: 40px auto;
-  padding: 0 20px;
+.nav-link.active{
+  background:rgba(37,99,235,.1);
 }
 
-.card {
-  background: var(--card);
-  border-radius: 14px;
-  padding: 24px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.06);
-  border: 1px solid var(--border);
+/* Main */
+.main{ flex:1; display:flex; flex-direction:column; }
+
+.header{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:18px 28px;
+  background:var(--card);
+  border-bottom:1px solid var(--border);
 }
 
-.table {
-  width: 100%;
-  border-collapse: collapse;
+.content{
+  padding:32px;
+  overflow:auto;
 }
 
-.table th {
-  text-align: left;
-  font-size: 14px;
-  color: var(--muted);
-  border-bottom: 1px solid var(--border);
-  padding: 12px;
+/* KPI */
+.kpi-grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
+  gap:20px;
+  margin-bottom:30px;
 }
 
-.table td {
-  padding: 14px 12px;
-  border-bottom: 1px solid var(--border);
-  cursor: pointer;
+.kpi{
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:14px;
+  padding:20px;
+  box-shadow:var(--shadow);
 }
 
-.badge {
-  background: #dbeafe;
-  color: #1d4ed8;
-  padding: 4px 10px;
-  border-radius: 999px;
-  font-size: 12px;
-  font-weight: 600;
+.kpi h3{
+  margin:0 0 6px;
+  font-size:12px;
+  text-transform:uppercase;
+  color:var(--muted);
 }
 
-.alert-banner {
-  background: var(--danger);
-  color: white;
-  padding: 14px 20px;
-  border-radius: 10px;
-  margin-bottom: 20px;
-  font-weight: 600;
+.kpi-value{
+  font-size:26px;
+  font-weight:800;
 }
 
-.details {
-  padding: 14px;
-  background: rgba(0,0,0,0.04);
-  border-radius: 8px;
-  margin-top: 10px;
-  font-size: 14px;
+/* Section */
+.section{
+  margin-bottom:40px;
 }
 
-body.dark .details {
-  background: rgba(255,255,255,0.05);
+.section h2{
+  margin-bottom:14px;
 }
 
-.hidden { display: none; }
+/* Table */
+table{
+  width:100%;
+  border-collapse:collapse;
+}
 
-.meta {
-  font-size: 13px;
-  color: var(--muted);
-  margin-bottom: 20px;
+th, td{
+  padding:12px;
+  border-bottom:1px solid var(--border);
+  text-align:left;
+}
+
+tr:hover{
+  background:rgba(37,99,235,.05);
+}
+
+/* Badges */
+.badge{
+  padding:4px 10px;
+  border-radius:999px;
+  font-size:12px;
+  font-weight:600;
+}
+
+.badge.scheduled{ background:#dbeafe; color:#1d4ed8; }
+.badge.inprogress{ background:#fef3c7; color:#b45309; }
+.badge.completed{ background:#dcfce7; color:#166534; }
+
+/* Empty State */
+.empty{
+  padding:40px;
+  text-align:center;
+  color:var(--muted);
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:14px;
+}
+
+.filter-bar{
+  margin-bottom:20px;
+  display:flex;
+  gap:12px;
+}
+
+select{
+  padding:8px;
+  border-radius:6px;
+  border:1px solid var(--border);
 }
 </style>
 </head>
 
 <body>
 
-<header>
-  <nav style="
-  background:var(--card);
-  padding:12px 30px;
-  border-bottom:1px solid rgba(0,0,0,.08);
-  display:flex;
-  gap:18px;
-  flex-wrap:wrap;
-">
-  <a href="/customer">Dashboard</a>
-  <a href="/customer/licenses">Licenses</a>
-  <a href="/customer/devices">Devices</a>
-  <a href="/customer/analytics">Analytics</a>
-  <a href="/customer/cdr">CDR</a>
-  <a href="/customer/maintenance">Maintenance</a>
-  <a href="/customer/status">Status</a>
-  <a href="/customer/incidents">Incidents</a>
-</nav>
+<div class="sidebar">
+  <h2>Customer Portal</h2>
+  <a href="/customer" class="nav-link">Dashboard</a>
+  <a href="/customer/maintenance" class="nav-link active">Maintenance</a>
+</div>
 
+<div class="main">
+
+<div class="header">
+  <h1>Webex Platform Maintenance</h1>
   <div>
-    <strong>Webex Platform Maintenance</strong>
-    <div id="tenantBadge" style="margin-top:4px;font-size:13px;color:var(--muted);"></div>
+    <button id="btnTheme">Toggle Theme</button>
+    <button onclick="loadMaintenance(true)">Refresh</button>
   </div>
+</div>
 
-  <div>
-    <button onclick="toggleDark()">Dark Mode</button>
-    <button onclick="loadData()">Refresh</button>
-  </div>
-</header>
+<div class="content">
 
-<div class="container">
-
-  <div id="alertBanner" class="alert-banner hidden">
-    ⚠ Major Maintenance / Critical Impact Detected
-  </div>
-
-  <div class="card">
-    <div class="meta">
-      Last updated: <span id="lastUpdated">Loading...</span>
+  <div class="kpi-grid">
+    <div class="kpi">
+      <h3>Upcoming</h3>
+      <div class="kpi-value" id="kUpcoming">—</div>
     </div>
-
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Scheduled For</th>
-          <th>Status</th>
-          <th>Impact</th>
-          <th>Description</th>
-        </tr>
-      </thead>
-      <tbody id="tableBody"></tbody>
-    </table>
+    <div class="kpi">
+      <h3>Active</h3>
+      <div class="kpi-value" id="kActive">—</div>
+    </div>
+    <div class="kpi">
+      <h3>Completed (50)</h3>
+      <div class="kpi-value" id="kCompleted">—</div>
+    </div>
   </div>
 
+  <div class="filter-bar">
+    <select id="productFilter">
+      <option value="">All Products</option>
+      <option value="WebexMeeting">Webex Meetings</option>
+      <option value="WebexCalling">Webex Calling</option>
+    </select>
+  </div>
+
+  <div id="maintenanceContainer"></div>
+
+</div>
 </div>
 
 <script>
+const CACHE_KEY = "maintenanceCacheV1";
+const CACHE_TTL = 5 * 60 * 1000;
 
-/* ============================
-   SAFE FETCH (PIN REDIRECT)
-============================ */
+function loadTheme(){
+  const saved = localStorage.getItem("uiTheme") || "light";
+  document.documentElement.setAttribute("data-theme", saved);
+}
+document.getElementById("btnTheme").onclick = () => {
+  const cur = document.documentElement.getAttribute("data-theme");
+  const next = cur === "dark" ? "light" : "dark";
+  localStorage.setItem("uiTheme", next);
+  loadTheme();
+};
+loadTheme();
 
-async function apiFetch(url) {
-  const res = await fetch(url, { credentials: "include" });
-
-  if (res.status === 401) {
-    window.location.href = "/pin";
-    return null;
-  }
-
-  let data;
-  try {
-    data = await res.json();
-  } catch {
-    window.location.href = "/pin";
-    return null;
-  }
-
-  if (data?.error === "pin_required" || data?.error === "pin_required_or_expired") {
-    window.location.href = "/pin";
-    return null;
-  }
-
-  return data;
+async function fetchMaintenance(){
+  const res = await fetch("/api/maintenance");
+  return await res.json();
 }
 
-/* ============================
-   UI
-============================ */
+async function loadMaintenance(force=false){
 
-function toggleDark() {
-  document.body.classList.toggle("dark");
-  localStorage.setItem("darkMode", document.body.classList.contains("dark"));
-}
-
-if (localStorage.getItem("darkMode") === "true") {
-  document.body.classList.add("dark");
-}
-
-function formatDate(dateStr) {
-  if (!dateStr) return "—";
-  const d = new Date(dateStr);
-  if (isNaN(d.getTime())) return "—";
-  return d.toLocaleString();
-}
-
-/* ============================
-   Tenant
-============================ */
-
-async function loadTenant() {
-  const me = await apiFetch("/api/me");
-  if (!me) return;
-
-  if (me.orgName) {
-    document.getElementById("tenantBadge").innerHTML =
-      `<span class="badge">Tenant: ${me.orgName}</span>`;
-  }
-}
-
-/* ============================
-   Load Maintenance
-============================ */
-
-async function loadData() {
-
-  const banner = document.getElementById("alertBanner");
-  banner.classList.add("hidden");
-
-  const data = await apiFetch("/api/maintenance");
-  if (!data) return;
-
-  document.getElementById("lastUpdated").textContent =
-    formatDate(data.lastUpdated);
-
-  const tbody = document.getElementById("tableBody");
-  tbody.innerHTML = "";
-
- const maintenance =
-  data.maintenance ||
-  data.scheduled_maintenances ||
-  data.upcoming ||
-  [];
-
-
-  if (maintenance.some(m => m.impact === "major" || m.impact === "critical")) {
-    banner.classList.remove("hidden");
+  if(!force){
+    const cached = JSON.parse(localStorage.getItem(CACHE_KEY) || "null");
+    if(cached && (Date.now() - cached.timestamp) < CACHE_TTL){
+      render(cached.data);
+      return;
+    }
   }
 
-maintenance.forEach(item => {
+  const data = await fetchMaintenance();
+  localStorage.setItem(CACHE_KEY, JSON.stringify({
+    timestamp: Date.now(),
+    data
+  }));
 
-  const tr = document.createElement("tr");
+  render(data);
+}
 
-  tr.innerHTML = `
-    <td>${formatDate(item.created_at || item.updated_at)}</td>
-    <td>${item.status || "—"}</td>
-    <td>${item.impact || "—"}</td>
-    <td>${item.name || "—"}</td>
+function render(data){
+
+  const container = document.getElementById("maintenanceContainer");
+  container.innerHTML = "";
+
+  const items = data?.maintenance || [];
+
+  const upcoming = items.filter(m => m.status?.toLowerCase() === "scheduled");
+  const active = items.filter(m => m.status?.toLowerCase().includes("progress"));
+  const completed = items.filter(m => m.status?.toLowerCase() === "completed");
+
+  document.getElementById("kUpcoming").textContent = upcoming.length;
+  document.getElementById("kActive").textContent = active.length;
+  document.getElementById("kCompleted").textContent = completed.length;
+
+  const filter = document.getElementById("productFilter").value;
+
+  const filtered = filter ?
+    items.filter(m =>
+      (m.components || []).some(c => c.product_group === filter)
+    )
+    : items;
+
+  if(filtered.length === 0){
+    container.innerHTML = `
+      <div class="empty">
+        No maintenance events found.
+      </div>`;
+    return;
+  }
+
+  const table = document.createElement("table");
+
+  table.innerHTML = `
+    <thead>
+      <tr>
+        <th>Date</th>
+        <th>Status</th>
+        <th>Impact</th>
+        <th>Name</th>
+      </tr>
+    </thead>
+    <tbody>
+      ${filtered.map(m => `
+        <tr>
+          <td>${new Date(m.created_at).toLocaleString()}</td>
+          <td><span class="badge ${badgeClass(m.status)}">${m.status}</span></td>
+          <td>${m.impact || "—"}</td>
+          <td>${m.name}</td>
+        </tr>
+      `).join("")}
+    </tbody>
   `;
 
-  const detailRow = document.createElement("tr");
-  detailRow.classList.add("hidden");
+  container.appendChild(table);
+}
 
-  const detailCell = document.createElement("td");
-  detailCell.colSpan = 4;
+function badgeClass(status){
+  const s = (status || "").toLowerCase();
+  if(s.includes("progress")) return "inprogress";
+  if(s === "completed") return "completed";
+  return "scheduled";
+}
 
-  const updates = (item.incident_updates || [])
-    .map(u => `
-      <div style="margin-bottom:10px;">
-        <strong>${u.status}</strong> — ${formatDate(u.updated_at)}
-        <div style="margin-top:6px;">${u.body}</div>
-      </div>
-    `)
-    .join("");
+document.getElementById("productFilter")
+  .addEventListener("change", () => loadMaintenance(true));
 
-  detailCell.innerHTML =
-    `<div class="details">${updates || "No details available."}</div>`;
-
-  detailRow.appendChild(detailCell);
-
-  tr.onclick = () => {
-    detailRow.classList.toggle("hidden");
-  };
-
-  tbody.appendChild(tr);
-  tbody.appendChild(detailRow);
-});
-
-/* ============================
-   Init
-============================ */
-
-loadTenant();
-loadData();
-
+loadMaintenance();
 </script>
+
 </body>
 </html>
