--- a/ui/customer/maintenance.html
+++ b/ui/customer/maintenance.html
@@ -112,10 +112,6 @@ body{
   margin-bottom:40px;
 }
 
-.section h2{
-  margin-bottom:14px;
-}
-
 /* Table */
 table{
   width:100%;
@@ -130,6 +126,7 @@ th, td{
 
 tr:hover{
   background:rgba(37,99,235,.05);
+  cursor:pointer;
 }
 
 /* Badges */
@@ -144,7 +141,32 @@ tr:hover{
 .badge.inprogress{ background:#fef3c7; color:#b45309; }
 .badge.completed{ background:#dcfce7; color:#166534; }
 
-/* Empty State */
+/* Detail */
+.detail-row{
+  background:rgba(37,99,235,.04);
+}
+
+.detail-box{
+  padding:18px;
+  font-size:14px;
+}
+
+/* Buttons */
+.btn-email{
+  padding:6px 10px;
+  border-radius:6px;
+  border:none;
+  background:var(--accent);
+  color:white;
+  font-size:12px;
+  cursor:pointer;
+}
+
+.btn-email:hover{
+  opacity:.85;
+}
+
+/* Empty */
 .empty{
   padding:40px;
   text-align:center;
@@ -198,7 +220,7 @@ select{
       <div class="kpi-value" id="kActive">—</div>
     </div>
     <div class="kpi">
-      <h3>Completed (50)</h3>
+      <h3>Completed</h3>
       <div class="kpi-value" id="kCompleted">—</div>
     </div>
   </div>
@@ -206,8 +228,6 @@ select{
   <div class="filter-bar">
     <select id="productFilter">
       <option value="">All Products</option>
-      <option value="WebexMeeting">Webex Meetings</option>
-      <option value="WebexCalling">Webex Calling</option>
     </select>
   </div>
 
@@ -217,8 +237,7 @@ select{
 </div>
 
 <script>
-
-const CACHE_KEY = "maintenanceCacheV1";
+const CACHE_KEY = "maintenanceCacheV2";
 const CACHE_TTL = 5 * 60 * 1000;
 
 /* =========================
@@ -239,16 +258,30 @@ document.getElementById("btnTheme").onclick = function(){
 loadTheme();
 
 /* =========================
-   API
+   FETCH
 ========================= */
 async function fetchMaintenance(){
-  try {
-    const res = await fetch("/api/maintenance", { cache: "no-store" });
-    if(!res.ok) return null;
-    return await res.json();
-  } catch(e){
-    console.error("Maintenance API error", e);
-    return null;
+  const res = await fetch("/api/maintenance", { cache:"no-store" });
+  if(!res.ok) return null;
+  return await res.json();
+}
+
+async function loadProductFilter(){
+  try{
+    const res = await fetch("/api/components");
+    if(!res.ok) return;
+
+    const data = await res.json();
+    const select = document.getElementById("productFilter");
+
+    Object.keys(data.grouped || {}).forEach(group=>{
+      const opt = document.createElement("option");
+      opt.value = group;
+      opt.textContent = group;
+      select.appendChild(opt);
+    });
+  }catch(e){
+    console.error("Component load failed");
   }
 }
 
@@ -270,7 +303,7 @@ async function loadMaintenance(force){
 
   localStorage.setItem(CACHE_KEY, JSON.stringify({
     timestamp: Date.now(),
-    data: data
+    data
   }));
 
   render(data);
@@ -286,17 +319,9 @@ function render(data){
 
   const items = data.maintenance || [];
 
-  const upcoming = items.filter(function(m){
-    return (m.status || "").toLowerCase() === "scheduled";
-  });
-
-  const active = items.filter(function(m){
-    return (m.status || "").toLowerCase().includes("progress");
-  });
-
-  const completed = items.filter(function(m){
-    return (m.status || "").toLowerCase() === "completed";
-  });
+  const upcoming = items.filter(m => (m.status||"").toLowerCase()==="scheduled");
+  const active = items.filter(m => (m.status||"").toLowerCase().includes("progress"));
+  const completed = items.filter(m => (m.status||"").toLowerCase()==="completed");
 
   document.getElementById("kUpcoming").textContent = upcoming.length;
   document.getElementById("kActive").textContent = active.length;
@@ -307,39 +332,50 @@ function render(data){
   let filtered = items;
 
   if(filterValue){
-    filtered = items.filter(function(m){
-      if(!m.components) return false;
-      return m.components.some(function(c){
-        return c.product_group === filterValue;
-      });
-    });
+    filtered = items.filter(m =>
+      (m.components || []).some(c => c.group === filterValue)
+    );
   }
 
   if(filtered.length === 0){
-    container.innerHTML = `
-      <div class="empty">
-        No maintenance events found.
-      </div>
-    `;
+    container.innerHTML = `<div class="empty">No maintenance events found.</div>`;
     return;
   }
 
   const table = document.createElement("table");
-
   let rows = "";
 
-  filtered.forEach(function(m){
+  filtered.forEach((m,index)=>{
 
+    const id = `detail-${index}`;
     const dateStr = m.created_at
       ? new Date(m.created_at).toLocaleString()
       : "—";
 
     rows += `
-      <tr>
+      <tr onclick="toggleDetail('${id}')">
         <td>${dateStr}</td>
-        <td><span class="badge ${badgeClass(m.status)}">${m.status || "—"}</span></td>
-        <td>${m.impact || "—"}</td>
-        <td>${m.name || "—"}</td>
+        <td><span class="badge ${badgeClass(m.status)}">${m.status||"—"}</span></td>
+        <td>${m.impact||"—"}</td>
+        <td>${m.name||"—"}</td>
+        <td>
+          <button class="btn-email"
+            onclick="event.stopPropagation(); notify('${m.id}')">
+            Email
+          </button>
+        </td>
+      </tr>
+
+      <tr id="${id}" class="detail-row" style="display:none;">
+        <td colspan="5">
+          <div class="detail-box">
+            <strong>Description:</strong><br/>
+            ${(m.body || m.description || "No details available.")}
+            <br/><br/>
+            <strong>Products Affected:</strong><br/>
+            ${(m.components||[]).map(c=>c.name).join(", ") || "—"}
+          </div>
+        </td>
       </tr>
     `;
   });
@@ -351,35 +387,65 @@ function render(data){
         <th>Status</th>
         <th>Impact</th>
         <th>Name</th>
+        <th></th>
       </tr>
     </thead>
-    <tbody>
-      ${rows}
-    </tbody>
+    <tbody>${rows}</tbody>
   `;
 
   container.appendChild(table);
 }
 
-/* =========================
-   BADGE COLOR
-========================= */
-function badgeClass(status){
-  const s = (status || "").toLowerCase();
+function toggleDetail(id){
+  const row = document.getElementById(id);
+  if(!row) return;
+  row.style.display = row.style.display==="none" ? "table-row" : "none";
+}
 
+function badgeClass(status){
+  const s=(status||"").toLowerCase();
   if(s.includes("progress")) return "inprogress";
-  if(s === "completed") return "completed";
+  if(s==="completed") return "completed";
   return "scheduled";
 }
 
 /* =========================
-   FILTER
+   EMAIL NOTIFY
+========================= */
+async function notify(maintenanceId){
+
+  const email = prompt("Enter email address to notify:");
+  if(!email) return;
+
+  try{
+    const res = await fetch("/api/maintenance/notify",{
+      method:"POST",
+      headers:{ "Content-Type":"application/json" },
+      body: JSON.stringify({
+        maintenanceId,
+        email
+      })
+    });
+
+    if(!res.ok){
+      alert("Failed to send notification.");
+      return;
+    }
+
+    alert("Notification sent successfully.");
+  }
+  catch(e){
+    alert("Notification error.");
+  }
+}
+
+/* =========================
+   INIT
 ========================= */
 document.getElementById("productFilter")
-  .addEventListener("change", function(){
-    loadMaintenance(true);
-  });
+  .addEventListener("change",()=>loadMaintenance(true));
 
+loadProductFilter();
 loadMaintenance(false);
 
 </script>
